# Judger

./: CMakeLists.txt
src/: logger.c  main.c  runner.c
